@@ -10,7 +10,7 @@ AUTOMAKE_OPTIONS = no-dependencies
 SUFFIXES = .H .h .C .cc .c .f .o
 INCLUDES           = @inc_list@
 
-noinst_PROGRAMS          = mgmesh dxmath uhbd_asc2bin smooth
+noinst_PROGRAMS          = mgmesh dxmath uhbd_asc2bin smooth norm
 mgmesh_SOURCES           = mgmesh.c 
 mgmesh_LDADD             = ../../src/aaa_lib/libapbs.la @lib_list@
 mgmesh_LDFLAGS           = ../../src/aaa_lib/libapbs.la @lib_list@
@@ -27,3 +27,7 @@ uhbd_asc2bin_SOURCES     = uhbd_asc2bin.f
 uhbd_asc2bin_LDADD       = ../../src/aaa_lib/libapbs.la @lib_list@
 uhbd_asc2bin_LDFLAGS     = @LDFLAGS@
 uhbd_asc2bin_CCLD        = $(F77)
+norm_SOURCES             = norm.c 
+norm_LDADD               = ../../src/aaa_lib/libapbs.la @lib_list@
+norm_LDFLAGS             = @LDFLAGS@ @FLIBS@
+norm_CCLD                = $(F77)
